<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginregis.RegisterActivity">

    <ImageView
        android:id="@+id/imgView_BgOverlay"
        android:layout_width="860dp"
        android:layout_height="0dp"
        android:alpha="0.2"
        android:contentDescription="@string/desc_BackgroundOverlay"
        android:foregroundTintMode="src_over"
        android:src="@drawable/overlay_bg_1"
        android:tintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#B3FFF07C" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_to_gashol"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_gashol" />

    <ImageView
        android:id="@+id/icon_gashol"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/shape_round_1"
        android:src="@drawable/icon_gashol"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".3"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_rounded_rectangle_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView_SignUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/textView_SignUpTitle"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_SimpleLine"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="8dp"
            android:background="@color/purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_SignUpTitle" />

        <EditText
            android:id="@+id/editText_Email"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:background="@drawable/shape_bg_edit_text"
            android:hint="@string/hintEmail"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="#59000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editText_UserName"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_bg_edit_text"
            android:hint="@string/hintUserName"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="#59000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_Email"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editText_MobileNum"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_bg_edit_text"
            android:hint="@string/hintMobileNum"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textColorHint="#59000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_UserName"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8"
            android:inputType="number"
            tools:ignore="TouchTargetSizeCheck" />


        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_Password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="#59000000"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintAnimationEnabled="false"
            app:hintTextColor="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_MobileNum"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#59000000">

            <EditText
                android:id="@+id/editText_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_bg_edit_text"
                android:hint='@string/hintPassword'
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#59000000"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Confirm Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_ConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="#59000000"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintAnimationEnabled="false"
            app:hintTextColor="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_Password"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#59000000">

            <EditText
                android:id="@+id/editText_ConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_bg_edit_text"
                android:hint='@string/hintConfirmPassword'
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#59000000"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView_Clickable_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="96dp"
            android:text="@string/textView_Clickable_Login"
            android:textColor="#3F51B5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignUp" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bright_yellow"
            android:text="@string/textView_SignUpTitle"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView_SignUpTitle"
            app:layout_constraintVertical_bias="0.8"
            app:layout_constraintWidth_percent=".8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>